updated API URLs for production

--- a/admin.html
+++ b/admin.html
@@ -160,7 +160,7 @@
     /* ------------------------------
        BASIC SETUP
     ------------------------------ */
-    const API = "http://localhost:5000";
+    const API = "";
     document.getElementById("apiUrlDisplay").textContent = API;
 
     const usersTable = document.getElementById("usersTable");
