--- a/checkout.html
+++ b/checkout.html
@@ -1,8 +1,8 @@
-<!-- <script>
+<script>
   const user = localStorage.getItem("feastery_user");
 
   if (!user) {
     alert("Please login to place an order");
     window.location.href = "login.html";
   }
-</script> -->
+</script>
